--- a/418.html
+++ b/418.html
@@ -26,25 +26,25 @@
                     <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
                     <div class="filter">
                     <a href="home.html">HOME</a>
-                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/@S_N00B">Youtube</a>
-                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <span class="footdogs">  / </span>
                     <a href="https://mastodon.social/@S_N00B">Mastodon</a>
                     </div>
                 </div>
             </div>
         </div>
         <!--Main Content-->
-        <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
-           <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
-              <li style="margin: 15px 0;padding: 0;list-style: none;">
+        <div class="Top">
+           <div class="content"><ul class="unordered">
+                <li>
                     <span> 418 | Can I get you some tea?</span>
                     <br>
                     <br>
                     <span>Coffee?!?! No can do, only have this teapot: 🫖</span>
                     <br>
                 </li>  
-               </ul>
+            </ul>
             </div>
         </div>
     </body>
