--- a/Entries/SteveRana.html
+++ b/Entries/SteveRana.html
@@ -26,18 +26,18 @@
                     <a href="https://s-n00b-1.github.io/Website/home.html"><img class="logo" alt="S_N00B's eye" src="https://s-n00b-1.github.io/Website/Files/Images/Logo.webp"></a>
                     <div class="filter">
                     <a href="https://s-n00b-1.github.io/Website/home.html">HOME</a>
-                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/@S_N00B">Youtube</a>
-                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <span class="footdogs">  / </span>
                     <a href="https://mastodon.social/@S_N00B">Mastodon</a>
                     </div>
                 </div>
             </div>
         </div>
         <!--Main Content-->
-        <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
-           <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
-              <li style="margin: 15px 0;padding: 0;list-style: none;">
+        <div class="Top">
+           <div class="content"><ul class="unordered">
+                <li>
                     <span>These avatars require the </span><a href="https://modrinth.com/mod/figura">Figura Mod</a><span> to be used</span>
                     <br>
                     <br>
