--- a/404.html
+++ b/404.html
@@ -17,33 +17,19 @@
         <link rel="stylesheet" href="Files/CSS/Home.css">
 </head>
     <!--Real Content-->
-    <body data-gr-c-s-loaded="true">
-        <!--Navigation Bar-->
-        <div class="navBar">
-            <!--Navigation Buttons-->
-            <div id="header" class="header">
-                <div class="logodiv">
-                    <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
-                    <div class="filter">
-                    <a href="home.html">HOME</a>
-                    <span class="footdogs">  / </span>
-                    <a href="https://www.youtube.com/@S_N00B">Youtube</a>
-                    <span class="footdogs">  / </span>
-                    <a href="https://mastodon.social/@S_N00B">Mastodon</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <body>
         <!--Main Content-->
         <div class="Top">
-           <div class="content"><ul class="unordered">
-                <li>
-                    <span> 404 | Either the URL is wrong, or I deleted it. Either way, not here.</span>
-                    <br>
-                </li>  
+            <div class="content">
+                <ul class="unordered">
+                    <li>
+                        <span> 404 | Either the URL is wrong, or I deleted it. Either way, not here.</span>
+                        <br>
+                    </li>  
                </ul>
             </div>
         </div>
     </body>
+    <script src="https://s-n00b-1.github.io/Website/Files/JS/navbar.js"></script>
 </html>
 <!--Document End-->
