--- a/content.html
+++ b/content.html
@@ -10,9 +10,9 @@
         <meta name="author" content="S_N00B">
         <meta name="Description" content="A Generic Website for S_N00B's needs.">
         <meta name="theme-color" content="#008080">
-        <meta property="og:title">
+        <meta content="Content" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta property="og:image">
+        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
         <title>S_N00B | Content</title>
         <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
