--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <meta name="author" content="S_N00B">
         <meta name="Description" content="A Generic Website for S_N00B's needs.">
         <meta name="theme-color" content="#008080">
-        <meta content="S_N00B" property="og:title">
+        <meta content="Home" property="og:title">
         <meta content="S_N00B" property="og:site_name">
         <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
